<resources>
    <string name="abastecimento">Plein</string>
    <string name="abastecimentos">Pleins</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_text">"MaishaPay est une application mobile money qui vous permet de créer un compte sans passer à la banque de transfert de l'argent à vos proches sans beaucoup de coûts, de faire des épargnes avec son téléphone"</string>
    <string name="accepter">Accepter</string>
    <string name="acompanhe_historico">"Suivez chronologiquement l'historique des coûts de votre véhicule."</string>
    <string name="action_settings">Settings</string>
    <string name="add_primeira_despesa">Ajoutez votre première dépense</string>
    <string name="add_primeiro_abastecimento">Ajouter votre premier ravitaillement</string>
    <string name="add_primeiro_combustivel">Ajouter votre premier carburant</string>
    <string name="add_primeiro_lembrete">Ajouter votre premier rappel</string>
    <string name="add_primeiro_local">Ajoutez votre première position</string>
    <string name="add_primeiro_motivo">Donnez votre première impression</string>
    <string name="add_primeiro_percurso">Ajouter votre premier itinéraire</string>
    <string name="add_primeiro_posto_combustivel">Ajouter votre première station service</string>
    <string name="add_primeiro_servico">Ajouter votre premier service</string>
    <string name="add_primeiro_tipo_despesa">Ajouter votre premier type de dépense</string>
    <string name="add_primeiro_tipo_servico">Ajouter votre premier type de service</string>
    <string name="add_primeiro_veiculo">Ajouter votre premier véhicule</string>
    <string name="adicionar_veiculo">Ajouter un véhicule</string>
    <string name="adresse">Adresse</string>
    <string name="aguarde">Patientez</string>
    <string name="alterar_senha">Changer le mot de passe</string>
    <string name="alternar_circulo">Cercles bascule</string>
    <string name="alternar_iniciar_zero">Basculer Démarrer zéro</string>
    <string name="alternar_linha_tracejada">Basculer ligne pointillée</string>
    <string name="alternar_percentual">Basculez Pourcentage</string>
    <string name="alternar_preencher">Basculer rempli</string>
    <string name="alternar_valor">Valeurs bascule</string>
    <string name="alternar_valor_x">Basculer X Valeur</string>
    <string name="alternar_valor_y">Basculer Y Valeur</string>
    <string name="alternar_zoom">Basculer PinchZoom</string>
    <string name="amanha">Demain</string>
    <string name="annuler">Annuler</string>
    <string name="annuler_2"><u>Annuler</u></string>
    <string name="ano">Année</string>
    <string name="apenas_uma_vez">Juste une fois</string>
    <string name="app_help">Aidez-nous à traduire et à améliorer la traduction dans votre langue. Elle sera peut-être disponible dans la prochaine version.</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">Maishapay</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approuves">• Approuves les paiements qui se seront effectués sur<u> ton compte Maishapay</u></string>
    <string name="aproveite_versao_pro">Profitez encore plus avec Drivvo PRO</string>
    <string name="ask_that_you"><b>Maishapay</b> demande si tu :</string>
    <string name="assinatura_nao_disponivel">Les souscriptions ne sont pas encore supportés sur votre appareil.</string>
    <string name="assunto">Objet</string>
    <string name="ate">À</string>
    <string name="ativo">Actif</string>
    <string name="atualizacao_disponivel">Mise à jour disponible</string>
    <string name="atualizacoes_pro">Mise à jour PRO</string>
    <string name="atualizacoes_pro_descricao">Recevez les futures fonctionnalités Pro, gratuitement.</string>
    <string name="atualizar">Mettre à jour</string>
    <string name="atualizar_descricao">Une nouvelle version de Drivvo est disponible. Mettre à niveau maintenant et vérifier les nouvelles fonctionnalités.</string>
    <string name="atualizar_mensagem">"Une nouvelle version de Drivvo est disponible, avec de nouvelles fonctionnalités. S'il vous plaît mettez à jour votre application dans les %s prochains jours. Je vous remercie!"</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="avalie_estrelas">Note de 5 étoiles</string>
    <string name="backup">Sauvegarde</string>
    <string name="backup_dados_nuvem">Sauvegardez les données de votre véhicule dans le cloud</string>
    <string name="badge_10_postos">Ravitaillé dans 10 endroits différents.</string>
    <string name="badge_abastecimento">Votre premier ravitaillement avec Drivvo.</string>
    <string name="badge_abastecimentos">%s Ravitaillement effectué.</string>
    <string name="badge_ano">1 année de contrôle de ce véhicule terminée.</string>
    <string name="badge_anos">Terminé %s année(s) de contrôle de ce véhicule.</string>
    <string name="badge_check">Vous avez débuté avec Drivvo.</string>
    <string name="badge_tanque_cheio">Terminé %s réservoir plein.</string>
    <string name="badge_vip">Ravitaillé %s fois au même endroit.</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_header">Click Read Barcode to read a barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="baterias">Batteries (%s)</string>
    <string name="bem_vindo_ao">Bienvenue à</string>
    <string name="beneficios_ter_conta">Certains avantages ne sont disponibles que pour les utilisateurs qui ont des comptes.</string>
    <string name="beneficios_versao_pro">Avantages de la version Pro</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_cadastrar">Inscription</string>
    <string name="btn_calcular">Calculer</string>
    <string name="btn_cancelar">Annuler</string>
    <string name="btn_compartilhar">Partager</string>
    <string name="btn_editar">Modifier</string>
    <string name="btn_enviar">Envoyer</string>
    <string name="btn_excluir">Supprimer</string>
    <string name="btn_fechar">Fermer</string>
    <string name="btn_mais_opcoes">"Plus d'options"</string>
    <string name="btn_nao">Non</string>
    <string name="btn_pronto">Terminé</string>
    <string name="btn_salvar">Enregistrer</string>
    <string name="btn_sim">Oui</string>
    <string name="cadastre_primeiro_abastecimento">Cliquez %s et ajoutez votre premier ravitaillement, dépense ou service.</string>
    <string name="cadastro_veiculo">Immatriculation des véhicules</string>
    <string name="calculadora_flex">Calculatrice Flex</string>
    <string name="card_10_postos">Roi des stations service! Vous vous êtes déjà ravitaillé dans 10 endroits différents.</string>
    <string name="card_abastecimento">"Félicitations! C'était votre premier ravitaillement en carburant avec Drivvo."</string>
    <string name="card_abastecimento_header">"Un jour important dans l'histoire."</string>
    <string name="card_abastecimentos">"C'était votre %s e ravitaillement avec Drivvo."</string>
    <string name="card_ano">Vous avez terminé une année de contrôle de votre véhicule.</string>
    <string name="card_anos">Vous avez complété %s année(s) de contrôle de votre véhicule.</string>
    <string name="card_check">Félicitations! Vous êtes prêt à contrôler les dépenses de vos véhicules.</string>
    <string name="card_tanque_cheio">"C'etait votre %s eme plein avec Drivvo."</string>
    <string name="card_tanque_cheio_header">Toujours sur le dessus!</string>
    <string name="card_vip">Vous êtes VIP! Vous vous êtes ravitaillé plus de %s fois dans le même endroit.</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chassi">Immatriculation des véhicules</string>
    <string name="cliente_versao_pro">Client PRO depuis %s</string>
    <string name="cnh">Permis de conduire</string>
    <string name="cnh_validade">Expiration du permis de conduire</string>
    <string name="code_pin">Code PIN</string>
    <string name="com_facebook_loginview_logged_in_using_facebook_f1gender">Connectée avec Facebook</string>
    <string name="com_facebook_loginview_logged_in_using_facebook_m2gender">Connecté avec Facebook</string>
    <string name="combustiveis">Carburants</string>
    <string name="combustivel">Carburant</string>
    <string name="combustivel_01">Essence</string>
    <string name="combustivel_02">Essence premium</string>
    <string name="combustivel_03">Ethanol</string>
    <string name="combustivel_04">Diesel</string>
    <string name="combustivel_05">GPL</string>
    <string name="combustivel_06">CNG</string>
    <string name="combustivel_07">Électrique</string>
    <string name="commande">Ta commande</string>
    <string name="completo">Achevée</string>
    <string name="completou_tanque">Réservoir rempli</string>
    <string name="compra_concluida">Achat terminé</string>
    <string name="compte_epargne">"Ouvrir un compte d'epargne"</string>
    <string name="configuracoes">Paramètres</string>
    <string name="conheca_as_novidades">En savoir plus sur les changements que nous avons préparé pour cette version.</string>
    <string name="criar_conta">Créer un compte</string>
    <string name="email">E-mail</string>
    <string name="login">"S'identifier"</string>
    <string name="ou">Ou</string>
    <string name="primeiro_nome">Prénom</string>
    <string name="segundo_nome">Nom de famille</string>
    <string name="senha">Code PIN</string>
    <string name="senha_repetir">Répéter le Code PIN</string>
    <string name="siganos">Nous suivre</string>
    <string name="telephone">Téléphone</string>
    <string name="ville">Ville</string>
</resources>