<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LL_Register" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/appbar" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:layout_weight="1.0">
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:id="@id/LinhaFormNome" android:layout_marginTop="@dimen/form_margem_top" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_nome" style="@style/form_icon_left" />
                    <LinearLayout android:layout_weight="1.0" style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Nome" android:nextFocusDown="@id/ET_Sobrenome" android:hint="@string/primeiro_nome" android:inputType="textCapWords" style="@style/form_edit_text" />
                    </LinearLayout>
                    <LinearLayout android:layout_weight="1.0" style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Sobrenome" android:nextFocusDown="@id/ET_Phone" android:hint="@string/segundo_nome" android:inputType="textCapWords" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormPhone" style="@style/form_linha">
                    <com.hbb20.CountryCodePicker android:textSize="13.0sp" android:id="@id/ET_CodePicker" android:layout_width="60.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" app:ccpDialog_textColor="@color/black_38" app:ccp_areaCodeDetectedCountry="true" app:ccp_autoDetectLanguage="true" app:ccp_contentColor="@color/black_38" app:ccp_countryAutoDetectionPref="LOCALE_SIM" app:ccp_defaultNameCode="cd" app:ccp_rememberLastSelection="true" app:ccp_showArrow="false" app:ccp_showFlag="false" app:ccp_showNameCode="false" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <com.santalu.widget.MaskEditText android:textSize="14.0sp" android:textColor="@color/texto" android:id="@id/ET_Phone" android:nextFocusDown="@id/ET_Email" android:hint="@string/telephone" android:inputType="phone" app:met_mask="\## #### ###" style="@style/form_edit_text" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormEmail" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_email" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Email" android:nextFocusDown="@id/ET_Adressse" android:hint="@string/email" android:inputType="textEmailAddress" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormAdressse" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_place" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Adressse" android:nextFocusDown="@id/ET_Ville" android:hint="@string/adresse" android:inputType="textEmailAddress" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormAVille" style="@style/form_linha">
                    <ImageView android:visibility="invisible" app:srcCompat="@drawable/ic_form_email" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Ville" android:nextFocusDown="@id/ET_Senha" android:hint="@string/ville" android:inputType="textEmailAddress" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormSenha" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_cadeado" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Senha" android:nextFocusDown="@id/ET_RepetirSenha" android:hint="@string/senha" android:inputType="textPassword" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormRepetirSenha" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_cadeado" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_RepetirSenha" android:hint="@string/senha_repetir" android:inputType="textPassword" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <Button android:id="@id/BTN_CriarConta" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/criar_conta" style="@style/botao_azul_canto_redondo" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>