<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout style="@style/dialog">
        <TextView android:id="@id/tv_titulo" android:text="Modification" style="@style/dialog_titulo" />
        <LinearLayout style="@style/dialog_group_text_img_header">
            <TextView android:id="@id/TV_Msg" android:layout_marginTop="10.0dip" android:text="Entrez votre code PIN pour confirmer la modification." style="@style/dialog_text" />
            <LinearLayout android:id="@id/LinhaFormEmail" android:layout_marginTop="10.0dip" style="@style/form_linha">
                <LinearLayout android:layout_marginRight="0.0dip" style="@style/form_linha_divisor">
                    <EditText android:theme="@style/form_edit_text_theme" android:id="@id/ET_CodePin" android:background="@color/transparente" android:hint="@string/email" android:inputType="textPassword" style="@style/form_edit_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/dialog_group_button">
            <Button android:id="@id/BTN_Nao" android:text="@string/btn_cancelar" style="@style/dialog_button" />
            <Button android:id="@id/BTN_Sim" android:text="@string/btn_enviar" style="@style/dialog_button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>