<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/LL_Register" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/appbar" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:layout_weight="1.0">
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:id="@id/LinhaFormNome" android:layout_marginTop="@dimen/form_margem_top" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_nome" style="@style/form_icon_left" />
                    <LinearLayout android:layout_weight="1.0" style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Nome" android:nextFocusDown="@id/ET_Sobrenome" android:hint="@string/primeiro_nome" android:inputType="textCapWords" style="@style/form_edit_text" />
                    </LinearLayout>
                    <LinearLayout android:layout_weight="1.0" style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Sobrenome" android:nextFocusDown="@id/ET_Phone" android:hint="@string/segundo_nome" android:inputType="textCapWords" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormPhone" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_phone" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Phone" android:nextFocusDown="@id/ET_Email" android:hint="@string/telephone" android:inputType="phone" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormEmail" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_email" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Email" android:nextFocusDown="@id/ET_Adressse" android:hint="@string/email" android:inputType="textEmailAddress" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormAdressse" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_place" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Adressse" android:nextFocusDown="@id/ET_Ville" android:hint="@string/adresse" android:inputType="textEmailAddress" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@id/LinhaFormAVille" style="@style/form_linha">
                    <ImageView app:srcCompat="@drawable/ic_form_destino" style="@style/form_icon_left" />
                    <LinearLayout style="@style/form_linha_divisor">
                        <EditText android:id="@id/ET_Ville" android:nextFocusDown="@id/ET_Senha" android:hint="@string/ville" android:inputType="textEmailAddress" style="@style/form_edit_text" />
                    </LinearLayout>
                </LinearLayout>
                <Button android:id="@id/BTN_CriarConta" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="20.0dip" android:text="Confirmer" style="@style/botao_azul_canto_redondo" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>