<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:id="@id/root" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:background="@drawable/background" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:layout_weight="1.0">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="100.0dip" android:layout_marginRight="10.0dip">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="40.0dip">
                        <View android:background="#ff80deea" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_weight="1.0" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/branco" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ou" android:layout_weight="0.0" android:textAllCaps="true" fontpath="Roboto-Regular.ttf" />
                        <View android:background="#ff80deea" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_weight="1.0" />
                    </LinearLayout>
                    <android.support.design.widget.TextInputLayout android:orientation="horizontal" android:id="@id/ti_telephone" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <com.hbb20.CountryCodePicker android:textSize="14.0sp" android:id="@id/ET_CodePicker" android:layout_width="60.0dip" android:layout_height="wrap_content" app:ccpDialog_textColor="@color/branco" app:ccp_areaCodeDetectedCountry="true" app:ccp_autoDetectLanguage="true" app:ccp_contentColor="@color/branco" app:ccp_countryAutoDetectionPref="LOCALE_SIM" app:ccp_defaultNameCode="cd" app:ccp_rememberLastSelection="true" app:ccp_showArrow="false" app:ccp_showFlag="false" app:ccp_showNameCode="false" />
                            <com.santalu.widget.MaskEditText android:textSize="16.0sp" android:textColor="@color/branco" android:id="@id/ET_Telephone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/telephone" android:inputType="phone" app:met_mask="\## #### ###" />
                        </LinearLayout>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout android:id="@id/ti_code_pin" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip">
                        <EditText android:textSize="16.0sp" android:textColor="@color/branco" android:id="@id/ET_Code_Pin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/code_pin" android:inputType="textPassword" android:imeOptions="actionDone" />
                    </android.support.design.widget.TextInputLayout>
                    <Button android:textSize="12.0sp" android:textColor="@color/md_orange_A700" android:gravity="end|center" android:id="@id/BTN_ForgotCodePin" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="J'ai perdu mon code pin" android:textAllCaps="false" fontpath="Roboto-Regular.ttf" style="@style/flat_button" />
                    <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                        <Button android:textColor="@color/md_orange_A700" android:id="@id/BTN_CriarConta" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/criar_conta" style="@style/flat_button" />
                        <Button android:textColor="@color/md_orange_A700" android:id="@id/BTN_Login" android:layout_width="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/login" style="@style/botao_branco_canto_redondo" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <ImageView android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginBottom="30.0dip" android:scaleType="centerInside" app:srcCompat="@drawable/fastpay3" />
            <Button android:textSize="14.0sp" android:textColor="#ff80deea" android:id="@id/btn_nao_criar_conta" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="0.0" style="@style/flat_button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>