<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:layout_gravity="center" android:layout_width="120.0dip" android:layout_height="120.0dip" app:srcCompat="@drawable/mpay" />
                <TextView android:textSize="30.0sp" android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Maishapay" />
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LL_Avaliar" android:background="@drawable/botao_branco" android:padding="10.0dip" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                    <TextView android:textSize="18.0sp" android:textColor="@color/botao_social" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/avalie_estrelas" android:singleLine="true" fontpath="Roboto-Regular.ttf" />
                    <LinearLayout android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                        <ImageView style="@style/estrela_avaliacao" />
                        <ImageView style="@style/estrela_avaliacao" />
                        <ImageView style="@style/estrela_avaliacao" />
                        <ImageView style="@style/estrela_avaliacao" />
                        <ImageView style="@style/estrela_avaliacao" />
                    </LinearLayout>
                </LinearLayout>
                <TextView android:textSize="18.0sp" android:textColor="@color/botao_social" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/siganos" android:singleLine="true" fontpath="Roboto-Regular.ttf" />
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                    <ImageButton android:id="@id/IB_Facebook" android:layout_marginRight="10.0dip" app:srcCompat="@drawable/ic_facebook" style="@style/botao_social" />
                    <ImageButton android:id="@id/IB_Twitter" android:layout_marginLeft="10.0dip" app:srcCompat="@drawable/ic_twitter" style="@style/botao_social" />
                </LinearLayout>
                <TextView android:textSize="16.0sp" android:textColor="@color/botao_social" android:id="@id/TV_Versao" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/about_text" fontpath="Roboto-Regular.ttf" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/LL_Site" android:background="@drawable/botao_site" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="www.maishapay.online" android:singleLine="true" android:layout_weight="1.0" fontpath="Roboto-Medium.ttf" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>